# codewars-rust

./: Cargo.toml
break-camel-case/: Cargo.toml  Readme.org
break-camel-case/src/: v1.rs
camel-case/: Cargo.toml  Readme.org
camel-case/src/: lib.rs
diamond/: Readme.org
diamond/src/: v1.rs
dont-drink-the-water/: Cargo.toml  Readme.org
dont-drink-the-water/src/: lib.rs
eureka-number/: Cargo.toml  Readme.org  Readme.tex
eureka-number/src/: v1.rs
exp_sum/: Cargo.toml  Readme.org
exp_sum/src/: lib.rs
integer-partitions/: Cargo.toml  Readme.org
integer-partitions/src/: lib.rs
last-digit-huge-number/: Cargo.toml  Readme.org
last-digit-huge-number/src/: lib.rs
max_diff_in_order/: Cargo.toml  Readme.md
max_diff_in_order/src/: lib.rs
min-number/: Cargo.toml  Readme.md
min-number/src/: lib.rs
next-bigger-number-with-the-same-digits/: Cargo.toml  Readme.org
next-bigger-number-with-the-same-digits/src/: v1.rs
number-as-digit-square-sum/: Cargo.toml  Readme.md
number-as-digit-square-sum/src/: lib.rs
popcount/: Cargo.toml  Readme.org
popcount/src/: lib.rs
power-mod/src/: lib.rs
pyramid-slide-down/: Cargo.toml  Readme.org
pyramid-slide-down/src/: v1.rs
range-extraction/: Cargo.toml  Readme.org
range-extraction/src/: v1.rs
reverse-string/src/: lib.rs
rot13/src/: lib.rs
round-up/: Cargo.toml  Readme.org
round-up/src/: v1.rs
secret-string/: Cargo.toml
string-incrementer/: Cargo.toml  Readme.org
string-to-number/: Cargo.toml  Readme.org
sum-of-odd-nums/: Cargo.toml  Readme.org
unique-in-order/: Cargo.toml  Readme.md
(+8 files in other folders)
