[workspace]
resolver = "2"
members = [ "break-camel-case",
    "camel-case",
    "dont-drink-the-water",
    "exp_sum",
    "integer-partitions",
    "last-digit-huge-number",
    "max_diff_in_order",
    "min-number",
    "popcount",
    "reverse-string",
    "rot13",
    "secret-string",
    "string-incrementer",
    "string-to-number",
    "unique-in-order",
]
