[workspace]
resolver = "2"
members = [
    "break-camel-case",
    "camel-case",
    "diamond",
    "dont-drink-the-water",
    "eureka-number",
    "exp_sum",
    "integer-partitions",
    "last-digit-huge-number",
    "max_diff_in_order",
    "min-number",
    "next-bigger-number-with-the-same-digits",
    "popcount", "power-mod",
    "pyramid-slide-down",
    "range-extraction",
    "reverse-string",
    "rot13",
    "round-up",
    "secret-string",
    "string-incrementer",
    "string-to-number",
    "unique-in-order",
]
